All_Component_DX/force-app/main/default/objects/QB_Response_Options__c/QB_Response_Options__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This object is used to store Response Options (Possible Answer Types) to the Questions</description>
    <label>QB Response Options</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QB Response Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>