All_Component_DX/force-app/main/default/objects/QB_Response_Options__c/fields/Question_Bank__c.field-meta.xml
<CustomField>
    <fullName>Question_Bank__c</fullName>
    <description>This is a lookup field to Master Detail (Question Bank)</description>
    <label>Question</label>
    <referenceTo>Question_Bank__c</referenceTo>
    <relationshipLabel>QB Response Options</relationshipLabel>
    <relationshipName>QB_Response_Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>