All_Component_DX/force-app/main/default/objects/QB_Response_Options__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>This field is used to hold the response option for the question</description>
    <label>Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>