All_Component_DX/force-app/main/default/objects/QB_Response_Options__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>This field is used to store the order in which the response option should be displayed</description>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>